applications/minecraft/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft
  labels:
    policy.fraguinha.com/defaults: enabled
